--- a/raily/src/index.css
+++ b/raily/src/index.css
@@ -15,7 +15,7 @@ body {
   flex-direction: column;
   gap: 2em;
   background-color: #add8e6;
-  width:max-content;
+  width: 20vw;
   padding: 20px;
   height: 100vh;
   overflow: scroll;
@@ -23,4 +23,29 @@ body {
 
 .search-button {
   width: 100%;
+}
+
+.connection {
+  width: 100%;
+  height: max-content;
+  padding: 10px;
+  background-color: #007FFF;
+  justify-content: space-between;
+  color: white;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+.station-list {
+  width: 70%;
+}
+
+.station {
+  padding: 10px;
+}
+
+.connection-list {
+  width: 80vw;
+  height: 100%;
+  overflow: scroll;
 }
