--- a/raily/src/index.css
+++ b/raily/src/index.css
@@ -9,14 +9,8 @@ body {
 }
 
 .search-bar {
-  display: flex;
-  justify-content: center;
-  align-items: stretch;
-  flex-direction: column;
-  gap: 2em;
-  background-color: #add8e6;
+  background-color: #d4dcff;
   width: 20vw;
-  padding: 20px;
   height: 100vh;
   overflow: scroll;
 }
@@ -37,7 +31,8 @@ body {
 }
 
 .station-list {
-  width: 70%;
+  width: 50%;
+  overflow: scroll;
 }
 
 .station {
@@ -46,6 +41,11 @@ body {
 
 .connection-list {
   width: 80vw;
-  height: 100%;
+  height: 100vh;
+  overflow: scroll;
+}
+
+.form {
+  margin: 20px;
   overflow: scroll;
 }
